--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/labious/student_register.git"
+    "url": "git+https://github.com:labious/E-Register.git"
   },
   "keywords": [
     "e-register"
@@ -17,7 +17,7 @@
   "author": "Itthynkers",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/labious/student_register/issues"
+    "url": "https://github.com:labious/E-Register/issues"
   },
-  "homepage": "https://github.com/labious/student_register#readme"
+  "homepage": "https://ggithub.com:labious/E-Register#readme"
 }
